--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         style="line-height: 30px;"></i></button>
     <div class="dropdown-content">
       <a rel="nav-link" href="#about">About</a>
-      <a rel="nav-linkr" href="#work">Work</a>
+      <a rel="nav-linkr" href="#projects">Work</a>
+      <a rel="nav-linkr" href="#skills">Skills</a>
       <a rel="nav-link" href="#contact">Contact Me</a>
       <a rel="nav-link"
         href="https://drive.google.com/file/d/15sKcUqhx0nkwJyto4HDnKZxTa6VS3X_n/view?usp=sharing">Resume</a>
@@ -43,7 +44,7 @@
       <hr class="my-4">
       <p class="start-text">Front-end development rookie</p>
       <p class="lead1">
-        <a class="btn btn-primary btn-lg btn-outline-light" href="#work" role="button">Click for more</a>
+        <a class="btn btn-primary btn-lg btn-outline-light" href="#projects" role="button">Click for more</a>
       </p>
     </section>
   </div>
@@ -170,6 +171,8 @@
 
   <!-- </main> -->
   <!-- Skill Section -->
+  <br>
+  <br>
   <section id="skills">
     <h2 class="skill-header">Skills</h2>
     <div class="row">
