--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
           <h5 class="card-title">Make your meal APP</h5>
           <p class="card-text">About
             A page where you can use an ingredient to create search for a meal recipe!
-            <br>
+            <!-- <br>
             The WebApp use client-side storage to store persistent data. It is deployed to GitHub Pages, at the same
             time being responsive and interactive, which means it accept and respond to user input. It has two
             interfaces. The initial interface allows you to type in keywords and explore different meal options.
             Sequencially when the pictures of the meals are clicked the user would be redirected to the second interface
-            with detailed recipe in english, a translation in French is also available.
+            with detailed recipe in english, a translation in French is also available. -->
           </p>
         </div>
         <div class="card-footer">
@@ -113,11 +113,11 @@
           <p class="card-text">An application that an employee can use to generate a random password based on criteria
             they have selected.
 
-            This Password Generator has been generated as a fun Intermediate JavaScript challenge.
+            <!-- This Password Generator has been generated as a fun Intermediate JavaScript challenge.
 
             This app was created to run in the browser and feature dynamically updated HTML and CSS, all powered by
             JavaScript code that I wrote. My app has a relatively clean and polished user interface that is responsive,
-            ensuring that itself adapts to multiple screen sizes.
+            ensuring that itself adapts to multiple screen sizes. -->
           </p>
         </div>
         <div class="card-footer">
@@ -131,7 +131,7 @@
         <div class="card-body">
           <h5 class="card-title">Console Finances</h5>
           <p class="card-text">JavaScript code that analyzes the records to calculate different tasks.
-            JavaScript code that analyses the financial records of a company to calculate each of the following tasks
+            <!-- JavaScript code that analyses the financial records of a company to calculate each of the following tasks
             using a dataset composed of arrays with two fields: Date and Profit/Losses.
 
             The tasks are:
@@ -145,7 +145,7 @@
 
             The greatest increase in profits (date and amount) over the entire period.
 
-            The greatest decrease in losses (date and amount) over the entire period.
+            The greatest decrease in losses (date and amount) over the entire period. -->
           </p>
         </div>
         <div class="card-footer">
@@ -159,7 +159,7 @@
           <h5 class="card-title">Horiseon Website</h5>
           <p class="card-text">This website is created for the marketing purpose of the Horiseon company, it is designed to optimise for search engines.
 
-            This website is created for the marketing purpose of the Horiseon company, it is designed to optimise for search engines. In order to achieve this, the codebase of this website follows accessibility standards.
+            <!-- This website is created for the marketing purpose of the Horiseon company, it is designed to optimise for search engines. In order to achieve this, the codebase of this website follows accessibility standards. -->
           </p>
         </div>
         <div class="card-footer">
