fixed the blank space

--- a/index.html
+++ b/index.html
@@ -154,10 +154,12 @@
         </div>
       </div>
       <div class="card">
-        <img src="https://github.com/SabrinaHuajy/SabrinaHuajy-Horiseon-Website/raw/main/assets/images/screenshot1.PNG" class="card-img-top" alt="Horiseon Website">
+        <img src="https://github.com/SabrinaHuajy/SabrinaHuajy-Horiseon-Website/raw/main/assets/images/screenshot1.PNG"
+          class="card-img-top" alt="Horiseon Website">
         <div class="card-body">
           <h5 class="card-title">Horiseon Website</h5>
-          <p class="card-text">This website is created for the marketing purpose of the Horiseon company, it is designed to optimise for search engines.
+          <p class="card-text">This website is created for the marketing purpose of the Horiseon company, it is designed
+            to optimise for search engines.
 
             <!-- This website is created for the marketing purpose of the Horiseon company, it is designed to optimise for search engines. In order to achieve this, the codebase of this website follows accessibility standards. -->
           </p>
@@ -171,6 +173,7 @@
 
   <!-- </main> -->
   <!-- Skill Section -->
+  <br>
   <br>
   <br>
   <section id="skills">
