--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <script src="https://kit.fontawesome.com/a030d70bdd.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
