fixed commiting issue

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
+
+<!-- Some of your margin spacing were tight to the sides of the page. Pad some of the margins to have it fit nicely on the page. The footer spacing was not aligned with the Contact Me sitting lower than the links email, GitHub, etc. The footer was also not fully defined. You could correct this but making the footer a different color than the page. Also, be sure to include a header with an avatar or a photo of yourself! -->
+
 <body>
   <!-- main logo / nav -->
 
@@ -49,12 +52,10 @@
     </section>
   </div>
 
-  <!-- <div>
-    <img class="recent-photo"
-      src="https://globalgamejam.org/sites/default/files/styles/user_profile_picture_large__wide/public/user/wechat_image_20201029175553.jpg?itok=oNcGE2cx&timestamp=1604165492"
-      alt="image of Sabrina">
+  <div>
+
   </div>
-  </section> -->
+  </section>
 
   <!-- <main class="page-wrapper"> -->
   <!-- about me -->
@@ -62,20 +63,28 @@
     <div class="flex-container">
     </div>
     <h2>About Me</h2>
-    <div class="content-section" id="aboutborder">
+    <div id="aboutborder">
 
-      <p>I am a Biology student from the University of York whose life depends on the prosperity of rapeseeds. Coming
-        from a bioinformatics background I've realised how much powerful advancements and revolution tech has brought
-        into life science research and the life of human-being in general. I found my creativity was largely inspired
-        by
-        the coding process and it really allowed me to exhibit many skills I adopted from my studies. I have
-        previously
-        had some experiences with analytical libraries such as Pandas, NumPy, Matplotlib for processing biological
-        data.
-        Scientific data processes for life sciences that requires a lot of normalization.Machine learning, predictive
-        modelling and algorithms for plant genomics that assist with molecular marker assistant breeding of polyploid
-        plants/crops and metabolites analysis. Nevertheless I'm a complete rookie in web developement but I'm thrilled
-        to become better at it.</p>
+      <img class="recent-photo"
+        src="https://globalgamejam.org/sites/default/files/styles/user_profile_picture_large__wide/public/user/wechat_image_20201029175553.jpg?itok=oNcGE2cx&timestamp=1604165492"
+        alt="image of Sabrina">
+
+      <p>I am a Biology student from the University of York whose life depends on the prosperity of rapeseeds. 
+      <br>
+      <br>
+      Coming from a bioinformatics background I've realised how much powerful advancements and revolution tech has brought into life science research and the life of human-being in general. 
+       <br>
+       <br>
+      I found my creativity was largely inspired by the coding process and it really allowed me to exhibit many skills I adopted from my studies. 
+      <br>
+      <br>
+      I have previously had some experiences with analytical libraries such as Pandas, NumPy, Matplotlib for processing biological data. Scientific data processes for life sciences that requires a lot of normalization. 
+      <br>
+      <br>
+      Machine learning, predictive modelling and algorithms for plant genomics that assist with molecular marker assistant breeding of polyploid plants/crops and metabolites analysis. 
+      <br>
+      <br>
+      Nevertheless I'm a complete rookie in web developement but I'm thrilled to become better at it.</p>
 
 
     </div>
@@ -211,21 +220,22 @@
   </section>
   <!-- contact -->
   <section id="content-section">
-    <aside class="page-section contact" id="contact">
+    <!-- <aside class="page-section contact" id="contact"> -->
+    <div id="contact-content">
       <h2>Contact Me</h2>
-    </aside>
+      <!-- </aside> -->
 
 
-    <ul class="content-section" id="contactlinks">
-      <li><a href="mailto:j.hua@york.ac.uk">Email</a></li>
+      <ul id="contactlinks">
+        <li><a href="mailto:j.hua@york.ac.uk">Email</a></li>
 
-      <li><a href="https://github.com/SabrinaHuajy">Github</a></li>
+        <li><a href="https://github.com/SabrinaHuajy">Github</a></li>
 
-      <li><a href="https://twitter.com/hua_jingyu">Twitter</a></li>
+        <li><a href="https://twitter.com/hua_jingyu">Twitter</a></li>
 
-      <li><a href="https://www.linkedin.com/in/sabrinahuajy/">LinkedIn</a></li>
-    </ul>
-
+        <li><a href="https://www.linkedin.com/in/sabrinahuajy/">LinkedIn</a></li>
+      </ul>
+    </div>
   </section>
 
 </body>
