updated link to sections

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <button class="btn" style="background-color: lightblue; vertical-align: middle;"><i class="fa fa-bars"
         style="line-height: 30px;"></i></button>
     <div class="dropdown-content">
-      <a rel="nav-link" href="#about">About</a>
+      <a rel="nav-link" href="#aboutsection">About</a>
       <a rel="nav-linkr" href="#projects">Work</a>
       <a rel="nav-linkr" href="#skills">Skills</a>
-      <a rel="nav-link" href="#contact">Contact Me</a>
+      <a rel="nav-link" href="#contactlinks">Contact Me</a>
       <a rel="nav-link"
         href="https://drive.google.com/file/d/15sKcUqhx0nkwJyto4HDnKZxTa6VS3X_n/view?usp=sharing">Resume</a>
 
